# tetris-pygame

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: board.py  constants.py  game.py  tetromino.py
tests/: test_game.py  test_tetromino.py
